Este cambio es pulento

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </head>
   <body>
     <header class="bg-secondary bg-gradient text-white">
-        <nav class="navbar navbar-dark bg-success">
+        <nav class="navbar navbar-dark bg-dark">
             <div class="container-fluid">
-              <a class="navbar-brand">Mi Agenda cambiada por el pipeline</a>
+              <a class="navbar-brand">Wena los cabres</a>
               <form class="d-flex">
                 <div id="iniciar-btn" class="g-signin2" data-onsuccess="onSignIn"></div>
                 <button id="cerrar-btn" type="button" class="btn btn-link link-light">Cerrar Sesión</button>
